--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
+    "axios": "^1.2.1",
     "bcryptjs": "^2.4.3",
     "flowbite": "^1.5.4",
     "flowbite-react": "^0.3.6",
+    "form-data": "^4.0.0",
+    "formidable": "^2.1.1",
     "formik": "^2.2.9",
+    "mv": "^2.1.1",
     "next": "12.2.5",
     "next-auth": "^4.17.0",
     "react": "18.2.0",
